Closed Bug 643182 Opened 14 years ago Closed 14 years ago

TI+JM: Assertion failure: Call site vanished., at ../methodjit/Compiler.cpp:2448

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

(Whiteboard: fixed-in-jaegermonkey)

--
x = 123;
function f() {}
function g(o) {
    y = x.p;
    eval('o');
}
g(f);
--
$ ./js -m -n -a test.js
Assertion failure: Call site vanished., at ../methodjit/Compiler.cpp:2448
Add missing rejoin path for JSOP_GETPROP.

http://hg.mozilla.org/projects/jaegermonkey/rev/4a9cf0eee947
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.