[INFER] Rejoin after recompiling from a cached GETPROP, bug 643182.